--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -113,8 +113,8 @@
 - title: Vincci The Mint
   location: Madrid
   description: Alójate en un hotel de diseño en plena Gran Vía, con desayuno y una bebida de bienvenida
-  price: 75
-  price-description: por persona. Basado en 2 personas, por suite
+  price: 150
+  price-description: por habitación por noche
   saved: 62
   expires: 2019/04/29
   image: https://d2xb1gb82lp62v.cloudfront.net/image/upload/f_auto,q_auto:best/a/sales/92164/b3819d97_3214_4901_aa37_dc64d61060cc.jpg
